Update header section by removing redundant images and add CSS class for header action to prevent text wrapping.

--- a/wp-content/themes/sbs-portal/assets/css/main.css
+++ b/wp-content/themes/sbs-portal/assets/css/main.css
@@ -1412,6 +1412,10 @@ body.mega-menu-open {
     z-index: 3;
 }
 
+.header-action{
+    white-space: nowrap;
+}
+
 .hero-navigation {
     z-index: 10000;
     max-width: 1500px;
